<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
        <EditText android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text" android:text="AzureShare" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/host" />
        <EditText android:id="@+id/host" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text" android:hint="192.168.0.1" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_path" />
        <EditText android:id="@+id/exportPath" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text" android:text="/export/azure-share" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uid" />
        <EditText android:id="@+id/uid" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="number" android:text="1000" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gid" />
        <EditText android:id="@+id/gid" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="number" android:text="1000" />

        <Button android:id="@+id/btnSave" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/save" />

    </LinearLayout>
</ScrollView>
